feat(web): comment view changes
